--- a/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
+++ b/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
@@ -20,6 +20,26 @@
     </div>
 </div>
 
+@*Modal cadastro de empresa*@
+<div class="modal fade" id="modalCadastroEmpresa" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Cadastro de Empresa</h4>
+            </div>
+            <div class="modal-body">
+                @using (Html.BeginForm("CadastrarEmpresa", "Administrativo", FormMethod.Post))
+                {
+                    @Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml",new PreTrip.Model.Classes.Empresa());
+                }
+            </div>
+            <br />
+            <div class="modal-footer"></div>
+        </div>
+    </div>
+</div>
+
 <div class="row" style="padding: 5em 0">
     <div class="col-md-10 wrapcenter">
         <div class="col-md-2">
@@ -43,6 +63,16 @@
                     <ul class="dropdown-menu">
                         <li><a href="#">Visualizar viagens</a></li>
                         <li><a href="#">Cadastrar Viagem</a></li>
+                    </ul>
+                </li>
+
+                <li role="presentation" class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        Gerenciar Empresas <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Visualizar Empresas</a></li>
+                        <li><a data-toggle="modal" data-target="#modalCadastroEmpresa">Cadastrar Nova Empresa</a></li>
                     </ul>
                 </li>
 
