--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -9,7 +9,7 @@
             </div>
 
             <div class="col-md-6 text-right">
-                @Html.ActionLink("Meu Perfil", "Alterar", "Usuarios", new { @class = "btn" })
+                @Html.ActionLink("Meu Perfil", "Alterar", "Usuario", new { @class = "btn" })
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
             <div class="col-md-4">
                 <div class="btn-group-vertical" role="group" style="width: 100%;">
                     <button type="button" class="btn btn-default">Empresa</button>
-                    <button type="button" class="btn btn-default">Viagens</button>
+					@Html.ActionLink("Viagens", "Index", "Viagem", new { @class = "btn btn-default" })
                 </div>
             </div>
 
